; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/lib/tests/extr_test-cpumap.c_main.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/lib/tests/extr_test-cpumap.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_cpu_map = type { i32 }

@__T_START = common dso_local global i32 0, align 4
@libperf_print = common dso_local global i32 0, align 4
@__T_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.perf_cpu_map*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* @__T_START, align 4
  %8 = load i32, i32* @libperf_print, align 4
  %9 = call i32 @libperf_init(i32 %8)
  %10 = call %struct.perf_cpu_map* (...) @perf_cpu_map__dummy_new()
  store %struct.perf_cpu_map* %10, %struct.perf_cpu_map** %6, align 8
  %11 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %6, align 8
  %12 = icmp ne %struct.perf_cpu_map* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %22

14:                                               ; preds = %2
  %15 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %6, align 8
  %16 = call i32 @perf_cpu_map__get(%struct.perf_cpu_map* %15)
  %17 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %6, align 8
  %18 = call i32 @perf_cpu_map__put(%struct.perf_cpu_map* %17)
  %19 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %6, align 8
  %20 = call i32 @perf_cpu_map__put(%struct.perf_cpu_map* %19)
  %21 = load i32, i32* @__T_OK, align 4
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %14, %13
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @libperf_init(i32) #1

declare dso_local %struct.perf_cpu_map* @perf_cpu_map__dummy_new(...) #1

declare dso_local i32 @perf_cpu_map__get(%struct.perf_cpu_map*) #1

declare dso_local i32 @perf_cpu_map__put(%struct.perf_cpu_map*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
